--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -19,16 +19,16 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        working-directory: it_management_platform/backend
+        working-directory: backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run Django checks
-        working-directory: it_management_platform/backend
+        working-directory: backend
         run: python manage.py check
 
       - name: Run permission tests
-        working-directory: it_management_platform/backend
+        working-directory: backend
         run: pytest apps/frontend/tests/test_permissions/ -v --tb=short
 
