--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,14 @@
 # Django & Web Framework
-Django==4.2.7
+# Django 4.2.11+ is required for Python 3.13 compatibility
+Django==4.2.11
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 django-cors-headers==4.3.1
 
 # Database
 django-environ==0.11.2
+dj-database-url==2.1.0
+psycopg2-binary==2.9.9
 
 # Security & Authentication
 django-allauth==0.57.0
@@ -18,6 +21,10 @@ drf-spectacular-sidecar==2023.12.1
 # Static Files & Frontend
 whitenoise==6.6.0
 
+# Cache (Redis support for production)
+django-redis==5.4.0
+redis==5.0.1
+
 # Utilities & Tools
 django-filter==23.5
 
@@ -28,7 +35,4 @@ python-decouple==3.8
 
 # Testing
 pytest==7.4.0
-pytest-django==4.11.1
-
-
-setuptools<81
+pytest-django==4.7.0
